Added a dynamic buffer, so that size of the file being processed is not a factor ( at least up to 4GB+ files )

--- a/Hexdump/Makefile
+++ b/Hexdump/Makefile
@@ -1,5 +1,5 @@
 hexdump: main.c
-	gcc -o hexdump main.c
+	gcc -Wall -Wextra -Wpedantic -Werror -o hexdump main.c
 
 hexdump_debug: main.c
 	gcc -g -O0 -DDEBUG -o hexdump_debug main.c
