Finished the BMP project, code is reasonably clean and works fine.

--- a/BMP Image Rotator/Makefile
+++ b/BMP Image Rotator/Makefile
@@ -5,6 +5,8 @@ TARGET = bmp_rotate
 SOURCES = main.c bmp_rotate.c
 HEADERS = bmp_rotate.h
 
+.DEFAULT_GOAL := prod
+
 debug: CFLAGS += $(CFLAGS_DEBUG)
 debug: $(TARGET)_debug
 
